fsgraph: fix view overflow in "events" demo

--- a/demo/fsgraph/css/default.css
+++ b/demo/fsgraph/css/default.css
@@ -15,6 +15,8 @@
 #scivi_fsgraph_view
 {
     flex: 1 1 auto;
+    /* overflow: hidden; */
+    height: 100%;
 }
 
 #scivi_fsgraph_a
@@ -24,7 +26,15 @@
     z-index: 5;
 }
 
-#scivi_fsgraph_rotate_bar_cotainer
+#scivi_fsgraph_rotate_bar_container
 {
     padding: 10px;
+    flex: 0 1 40px;
+}
+
+
+#scivi_fsgraph_stateline_container
+{
+    flex: 0 1 40px;
+    padding: 20px;
 }
